Fixed DisplayCard off-center

--- a/src/App.css
+++ b/src/App.css
@@ -46,15 +46,19 @@
 .exercise-form {
 	margin-bottom: 2em;
 	display: flex;
+	flex-direction: column;
 	gap: 1em;
 	justify-content: center;
+	align-items: center;
 }
 
 .exercise-form input {
-	padding: 0.5em;
+	padding: 0.7rem;
 	border-radius: 4px;
 	border: 1px solid #ccc;
-	font-size: 1rem;
+	text-align: center;
+	font-size: 1.2rem;
+	width: 100%;
 }
 
 .exercise-form button {
@@ -62,21 +66,31 @@
 	color: white;
 	border-radius: 12px;
 	transition: 0.2s;
+	width: 200px;
 }
 .exercise-form button:hover {
-	box-shadow: 2px 2px 4px rgba(255, 255, 255, 0.4);
+	transform: translateY(-3px);
 }
 
 .display-list {
 	width: 80%;
+	max-width: 500px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	list-style: none;
+	padding-left: 0;
 }
 
 .display-list li {
-	margin-bottom: 1em;
+	width: 100%;
+	margin-bottom: 1rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 1rem;
+	padding: 15px;
 	font-size: 1rem;
 	font-weight: 600;
 	border-radius: 12px;
@@ -85,10 +99,11 @@
 }
 
 .display-list button {
-	box-shadow: 2px 4px 8px rgba(222, 222, 222, 0.2);
+	/* box-shadow: 2px 4px 8px rgba(222, 222, 222, 0.2); */
 	background-color: #2b2b2b;
 }
 
 .display-list button:hover {
 	box-shadow: 2px 4px 8px rgba(222, 222, 222, 0.4);
+	transform: translateY(-3px);
 }
